udpated z-index to plan section to ensure modal stays on top of all elements in case someone happens to scroll all the way down with the menu open

--- a/styles.css
+++ b/styles.css
@@ -369,7 +369,7 @@ MODAL
   background-color: #fff;
   border: 1px solid rgb(229, 231, 235);
   border-radius: 8px;
-  z-index: 10;
+  z-index: 50;
   transform: translateX(300%);
   transition: transform 300ms;
 }
@@ -840,7 +840,7 @@ PRICING
   justify-content: space-between;
   position: relative;
   width: 100%;
-  z-index: 100;
+  z-index: 10;
 }
 
 .plan {
